--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.main-section{
+  margin: 0 auto;
+  width: 80vw;
+}
+
+/* @media screen and (max-width: 700px){
+  .main-section{
+    height: 350vh;
+  }
+}
+@media screen and (max-width: 400px){
+  .main-section{
+    height: 750vh;
+  }
+} */
