--- a/src/components/VehicleList.css
+++ b/src/components/VehicleList.css
@@ -11,30 +11,32 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   margin-top: 1rem;
 }
 .underline{
   border: 2px solid blue;
   background-color: blue;
-  width: 3rem;
-  margin-top: -1rem;
+  width: 6rem;
+  margin-top: -0.2rem;
 }
 
 .grid{
   margin-top: 1rem;
   display: grid;
-  grid-template-columns: repeat(auto-fill,230px);
+  grid-template-columns: repeat(auto-fill,330px);
   justify-content: center;
   align-items: center;
   gap: 10px;
 }
 .grid-item{
-  border: 2px solid grey;
+  border: 2px solid black;
+  border-radius: 10%;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   flex-direction: column;
-  color: black;
+  background-color: lightgray;
 }
 .buttons-container{
   margin-top: 1rem;
@@ -44,20 +46,9 @@
   height: 10vh;
 }
 .btn{
-  margin: 0 0.5rem;
+  margin: 0.5rem;
   padding: 10px;
-  width: 2.5rem;
   cursor: pointer;
-}
-.btn-filter{
-  margin: 0 0.5rem;
-  padding: 10px;
-  width: 5rem;
-  height: 5rem;
-  cursor: pointer;
-}
-.active{
-  background-color: gray;
 }
 .button-icon{
   cursor: pointer;
@@ -67,4 +58,11 @@
 input{
   margin: 1rem;
   padding: 10px;
+}
+.car-icon{
+  transform: scale(5);
+  margin: 2rem 0;
+}
+img{
+  max-width: 20rem;
 }
