--- a/src/components/VehicleList.css
+++ b/src/components/VehicleList.css
@@ -15,8 +15,8 @@
   margin-top: 1rem;
 }
 .underline{
-  border: 2px solid blue;
-  background-color: blue;
+  border: 2px solid  #0275d8;
+  background-color:  #0275d8;
   width: 6rem;
   margin-top: -0.2rem;
 }
